@@ -6,9 +6,6 @@ if {[package vsatisfies [package provide Tcl] 8.4]} {
     if {[llength [info commands apply]]} {
 	# We can use a lambda (anon function) and ::tcl::pkgconfig
 
-	if {([info commands ::tcl::pkgconfig] eq "")
-		|| ![::tcl::pkgconfig get threaded]} return
-
 	package ifneeded Ttrace @PACKAGE_VERSION@ [list ::apply {{dir} {
 	    if {[info exists ::env(TCL_THREAD_LIBRARY)] &&
 		[file readable $::env(TCL_THREAD_LIBRARY)/ttrace.tcl]} {
@@ -26,8 +23,6 @@ if {[package vsatisfies [package provide Tcl] 8.4]} {
 	# No anon functions available, go with the necessary evil of a
 	# named procedure, but use package specific prefix and no
 	# hardwired data changing between package versions.
-
-	if {[array names ::tcl_platform threaded] != "threaded"} return
 
 	package ifneeded Ttrace @PACKAGE_VERSION@ [list @PACKAGE_NAME@_source $dir]
 
